# sealport

./: AGENTS.md  BUILD.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
crates/fileferry-cli/: Cargo.toml
crates/fileferry-cli/src/: lib.rs
crates/fileferry-cli/tests/: cli_contract.rs  repository_commands.rs
crates/fileferry-core/: Cargo.toml
crates/fileferry-core/src/: lib.rs
crates/fileferry-platform/: Cargo.toml
crates/fileferry-platform/src/: lib.rs
crates/fileferry-policy/: Cargo.toml
crates/fileferry-policy/src/: lib.rs
crates/fileferry-web/src/: lib.rs  site.css  theme.js
crates/sealport-cli/: Cargo.toml
crates/sealport-cli/src/: lib.rs  main.rs
crates/sealport-cli/tests/: cli_contract.rs  version.rs
crates/sealport-core/: Cargo.toml
crates/sealport-core/src/: lib.rs
crates/sealport-crypto/: Cargo.toml
crates/sealport-crypto/src/: lib.rs
crates/sealport-platform/: Cargo.toml
crates/sealport-platform/src/: lib.rs
crates/sealport-policy/: Cargo.toml
crates/sealport-policy/src/: lib.rs
crates/sealport-storage/: Cargo.toml
crates/sealport-storage/src/: lib.rs
crates/sealport-testkit/: Cargo.toml
crates/sealport-testkit/src/: lib.rs
crates/sealport-web/src/: lib.rs  site.css
deploy/: sealport-web.env.example
deploy/caddy/: sealport.cc.caddy
deploy/systemd/: sealport-web.service
docs/: cli-contract.md  dependency-policy.md  homepage-deployment.md  operations.md  platform-metadata.md  repository-format.md  security.md  storage.md
