[workspace]
members = [
    "crates/sealport-cli",
    "crates/sealport-core",
    "crates/sealport-storage",
    "crates/sealport-crypto",
    "crates/sealport-platform",
    "crates/sealport-policy",
    "crates/sealport-testkit",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/dunamismax/sealport"

[workspace.dependencies]
assert_cmd = "2.2.2"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
