[workspace]
members = [
    "crates/fileferry-cli",
    "crates/fileferry-core",
    "crates/fileferry-storage",
    "crates/fileferry-crypto",
    "crates/fileferry-platform",
    "crates/fileferry-policy",
    "crates/fileferry-testkit",
    "crates/fileferry-web",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/dunamismax/fileferry"

[workspace.dependencies]
assert_cmd = "2.2.2"
argon2 = { version = "0.5.3", features = ["zeroize"] }
axum = "0.8.4"
chacha20poly1305 = "0.10.1"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.1"
futures-util = "0.3.31"
fastcdc = "4.0.1"
hkdf = "0.12.4"
leptos = { version = "0.8.14", default-features = false, features = ["ssr"] }
object_store = { version = "0.13.2", default-features = false, features = ["aws"] }
predicates = "3.1.3"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = "1.49.0"
toml = "1.1.2"
tower = "0.5.2"
tracing = "0.1.44"
zeroize = { version = "1.8.2", features = ["derive"] }
