[package]
name = "fileferry-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ferry"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
fileferry-core = { path = "../fileferry-core" }
fileferry-crypto = { path = "../fileferry-crypto" }
fileferry-platform = { path = "../fileferry-platform" }
fileferry-policy = { path = "../fileferry-policy" }
fileferry-storage = { path = "../fileferry-storage" }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
