[package]
name = "sealport-crypto"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
argon2.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
secrecy.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true
