[package]
name = "sealport-storage"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true, features = ["fs", "io-util"] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt-multi-thread"] }
