[package]
name = "sealport-testkit"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sealport-storage = { path = "../sealport-storage" }
tempfile.workspace = true
tokio = { workspace = true, features = ["sync"] }
